# SFML-SpaceShooter

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: Animation.h  Background.h  Bullet.h  Ennemy.h  Player.h  Score.h  deathScreen.h  gameInputs.h
include/menu/: Menus.h  WindowGestion.h
src/: Animation.cpp  Background.cpp  Bullet.cpp  Ennemy.cpp  Menus.cpp  Player.cpp  Score.cpp  WindowGestion.cpp  deathScreen.cpp  gameInputs.cpp  main.cpp
